--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,40 +1,78 @@
 <p>home-page works!</p>
 
-<button>Add Transactions</button>
+<div style="margin-bottom: 40px;">
+  <h2>Add Transaction</h2>
+  <form (ngSubmit)="onSubmit()">
 
-<div>
-  <input
-    type="number"
-    [(ngModel)]="userId" 
-    placeholder="Enter user ID"
-  />
-  <button (click)="getTransactionByID()">Get Transactions By ID</button>
+    <label for="id">ID:</label>
+    <input type="number" id="id" [(ngModel)]="newTransaction.id" name="id" required />
+
+    <label for="amount">Amount:</label>
+    <input type="number" id="amount" [(ngModel)]="newTransaction.amount" name="amount" required />
+
+    <label for="date">Date:</label>
+    <input type="datetime-local" id="date" [(ngModel)]="newTransaction.timestamp" name="date" required />
+    
+    <label for="type">Transaction-Type:</label>
+    <select id="type" [(ngModel)]="newTransaction.transactionType" name="type" required>
+      <option value="REFUND">REFUND</option>
+      <option value="SALE">SALE</option>
+    </select>
+
+    <label for="status">Status:</label>
+    <select id="status" [(ngModel)]="newTransaction.status" name="status" required>
+      <option value="FAILED">FAILED</option>
+      <option value="DECLINED">DECLINED</option>
+      <option value="APPROVED">APPROVED</option>
+    </select>
+
+    <label for="currency">Currency:</label>
+    <input type="text" id="currency" [(ngModel)]="newTransaction.currency" name="currency" required />
+    <select id="currency" [(ngModel)]="newTransaction.currency" name="currency" required>
+      <option value="EUR">EUR</option>
+      <option value="GBP">GBP</option>
+      <option value="INR">INR</option>
+    </select>
+
+    <button type="submit">Add Transaction</button>
+  </form>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-bordered table-striped">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Amount</th>
-        <th>Time</th>
-        <th>TransactionType</th>
-        <th>Status</th>
-        <th>Currency</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>{{ transaction.id }}</td>
-        <td>{{ transaction.amount }}</td>
-        <td>{{ transaction.timestamp }}</td>
-        <td>{{ transaction.transactionType }}</td>
-        <td>{{ transaction.status }}</td>
-        <td>{{ transaction.currency }}</td>
-      </tr>
-    </tbody>
-  </table>
+<div style="margin-bottom: 40px;">
+  <div>
+    <input
+      type="number"
+      [(ngModel)]="userId" 
+      placeholder="Enter user ID"
+    />
+    <button (click)="getTransactionByID()">Get Transactions By ID</button>
+  </div>
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Amount</th>
+          <th>Time</th>
+          <th>TransactionType</th>
+          <th>Status</th>
+          <th>Currency</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{ transaction.id }}</td>
+          <td>{{ transaction.amount }}</td>
+          <td>{{ transaction.timestamp }}</td>
+          <td>{{ transaction.transactionType }}</td>
+          <td>{{ transaction.status }}</td>
+          <td>{{ transaction.currency }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
 <button (click)="getTransaction()">Get Transactions</button>
 <div class="table-responsive">
     <table class="table table-bordered table-striped">
