--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,17 +2,22 @@
 
 <div style="margin-bottom: 40px;">
   <h2>Add Transaction</h2>
-  <form (ngSubmit)="onSubmit()">
-
-    <label for="id">ID:</label>
-    <input type="number" id="id" [(ngModel)]="newTransaction.id" name="id" required />
+  <form (ngSubmit)="onSubmit()" #transactionForm="ngForm">
 
     <label for="amount">Amount:</label>
-    <input type="number" id="amount" [(ngModel)]="newTransaction.amount" name="amount" required />
+    <input type="number" id="amount" [(ngModel)]="newTransaction.amount" name="amount" min="1" required #amount="ngModel" />
+    <div *ngIf="amount.invalid && (amount.dirty || amount.touched)" style="color: red;">
+      <small *ngIf="amount.errors?.['required']">Amount is required.</small>
+      <small *ngIf="amount.errors?.['min']">Amount must be greater than zero.</small>
+    </div>
 
     <label for="date">Date:</label>
-    <input type="datetime-local" id="date" [(ngModel)]="newTransaction.timestamp" name="date" required />
-    
+    <input type="datetime-local" id="date" [(ngModel)]="newTransaction.timestamp" name="date" required  min="2023-01-01T00:00" max="2024-12-31T23:59" #date="ngModel" />
+    <div *ngIf="(!isDateTimeValid() || date.invalid ) && (date.dirty || date.touched)" style="color: red;">
+      <small *ngIf="date.errors?.['required']">Date and time are required.</small>
+      <small *ngIf="!date.errors?.['required'] && !isDateTimeValid()">Date and time must be within the allowed range January 1, 2023 and December 31, 2024.</small>
+    </div>
+
     <label for="type">Transaction-Type:</label>
     <select id="type" [(ngModel)]="newTransaction.transactionType" name="type" required>
       <option value="REFUND">REFUND</option>
@@ -27,14 +32,13 @@
     </select>
 
     <label for="currency">Currency:</label>
-    <input type="text" id="currency" [(ngModel)]="newTransaction.currency" name="currency" required />
     <select id="currency" [(ngModel)]="newTransaction.currency" name="currency" required>
       <option value="EUR">EUR</option>
       <option value="GBP">GBP</option>
       <option value="INR">INR</option>
     </select>
 
-    <button type="submit">Add Transaction</button>
+    <button type="submit" [disabled]="!transactionForm.valid || !isDateTimeValid()">Add Transaction</button>
   </form>
 </div>
 
